# Teleop_Robotic_ARM-Task_3

./: README.md
manipulator/: CMakeLists.txt  package.xml
manipulator/config/: controllers.yaml
manipulator/launch/: gazebo.launch.py  robot_state_publisher_launch.py  teleop_complete.launch.py  test.launch.py
manipulator/scripts/: cartesian_controller.py  keyboard_teleop.py  simple_teleop.py
manipulator/urdf/: robot_core.urdf.xacro
